Bug 462901 - "Not ready" on status bar doesn't update after "Fill in all exact suggestions"
Summary: "Not ready" on status bar doesn't update after "Fill in all exact suggestions"
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-11 12:56 UTC by wojnilowicz
Modified: 2022-12-28 21:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wojnilowicz 2022-12-11 12:56:24 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open a fully translated .po file from your project
2. Erase target string in an entry
3. Save it
4. Tools->Fill in all exact suggestions and mark them as fuzzy

OBSERVED RESULT
"Not ready" counter in the status bar stays at 0.

EXPECTED RESULT
"Not ready" counter in the status bar should show 1.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-12-11 13:22:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/lokalize/-/merge_requests/24
Comment 2 Albert Astals Cid 2022-12-28 21:50:49 UTC
Git commit a48a63568ed4076c60bd756a4e48382d3e00c49f by Albert Astals Cid, on behalf of Łukasz Wojniłowicz.
Committed on 28/12/2022 at 21:36.
Pushed by aacid into branch 'master'.

Insert catalog string before setting its state

M  +5    -1    src/tm/tmview.cpp

https://invent.kde.org/sdk/lokalize/commit/a48a63568ed4076c60bd756a4e48382d3e00c49f