Insert catalog string before setting its state

BUG: 462901